ui/crates/system_ui/tests/ui/prelude_rejects_badge.stderr
error[E0432]: unresolved import `system_ui::prelude::Badge`
 --> tests/ui/prelude_rejects_badge.rs:1:5
  |
1 | use system_ui::prelude::Badge;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `Badge` in `prelude`
