ui/crates/system_ui/tests/ui/prelude_rejects_badge.rs
use system_ui::prelude::Badge;

fn main() {
    let _ = Badge;
}
